# tidal-mcp

./: .gitignore  Dockerfile  README.md  http_server.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: DEPLOYMENT.md
src/tidal_mcp/: server.py
